--- a/Data Engineering/How-Bootcamp-Projects/lambda/zappa_settings.json
+++ b/Data Engineering/How-Bootcamp-Projects/lambda/zappa_settings.json
@@ -1,12 +1,12 @@
 {
     "dev": {
         "aws_region": "us-east-1",
-        "profile_name": "andre_aws",
+        "profile_name": "serpa_aws",
         "project_name": "mercado-bitcoin-ingestor-lambda",
         "app_function": "mercado_bitcoin.lambda_function",
         "lambda_handler": "mercado_bitcoin.lambda_function.lambda_handler",
         "runtime": "python3.8",
-        "s3_bucket": "zappa-belisco-deployments",
+        "s3_bucket": "zappa-serpa-deployments",
         "events": [{
            "function": "mercado_bitcoin.lambda_function.lambda_handler",
            "expression": "rate(1 minute)"
