--- a/Data Engineering/How-Bootcamp-Projects/lambda/Makefile
+++ b/Data Engineering/How-Bootcamp-Projects/lambda/Makefile
@@ -4,3 +4,10 @@ clean:
 init: clean
 	pip install poetry
 	poetry install
+test:
+	poetry run python -m pytest
+
+#CI/CD
+ci-test:
+	poetry un python -m pytest
+	
