--- a/Data Engineering/How-Bootcamp-Projects/lambda/Makefile
+++ b/Data Engineering/How-Bootcamp-Projects/lambda/Makefile
@@ -8,6 +8,9 @@ test:
 	poetry run python -m pytest
 
 #CI/CD
+ci-setup:
+	pip install poetry
+	poetry install
+
 ci-test:
 	poetry un python -m pytest
-	
