--- a/Data Engineering/How-Bootcamp-Projects/lambda/zappa_settings.json
+++ b/Data Engineering/How-Bootcamp-Projects/lambda/zappa_settings.json
@@ -1,16 +1,28 @@
 {
-    "dev": {
+    "prod": {
         "aws_region": "us-east-1",
-        "profile_name": "serpa_aws",
-        "project_name": "mercado-bitcoin-ingestor-lambda",
+       
+        "project_name": "mercado-bitcoin",
         "app_function": "mercado_bitcoin.lambda_function",
         "lambda_handler": "mercado_bitcoin.lambda_function.lambda_handler",
         "runtime": "python3.8",
         "s3_bucket": "zappa-serpa-deployments",
+        "environment_variables":{"STAGE":"prod"},
         "events": [{
            "function": "mercado_bitcoin.lambda_function.lambda_handler",
            "expression": "rate(1 minute)"
        }],
-        "cloudwatch_log_level": "INFO"
-    }
+        "memory_size":128,
+        "apigateway_enabled":false
+    },
+    "dev":
+        {
+        "extends":"prod",
+        "debug":true,
+        "environment_variables":{"STAGE":"dev"},
+        "events":[{
+            "function":"mercado_bitcoin.lambda_function.lambda_handler",
+            "expression":"rate(60 minutes)"
+        }]
+        }
 }
